Sorted color issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,7 @@
   background-image: url('./images/background.jpeg');
   min-height: 100vh;
 }
+
+* > a {
+  color: black
+}
